--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -30,6 +30,11 @@
     "why": "Por que Visto Seguro",
     "contact": "Contato",
     "pricing": "Planos e Preços"
+  },
+  "services": {
+    "title": "Serviços de Visto",
+    "subtitle": "Explore nossas principais opções de visto para brasileiros.",
+    "closing": "Entre em contato conosco para mais opções de visto e suporte personalizado."
   },"tourism": {
     "title": "Visto de Turismo (B1/B2)",
     "intro": "O visto americano de turismo, também conhecido como B1/B2, é um dos mais solicitados pelos brasileiros.",
